--- a/netology/css/style.css
+++ b/netology/css/style.css
@@ -1,430 +1,524 @@
 @font-face {
-    font-family: OpenSans;
-    src: url("../fonts/OpenSans-Regular.woff");
-    font-weight: 400;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: OpenSans;
-    src: url("../fonts/OpenSans-Bold.woff");
-    font-weight: 600;
-    font-style: normal;
-  }
-  
-  body {
-    margin: 0;
-    font-family: OpenSans;
-  }
-  .section {
-    background-color: #eeeeee;
-  }
-  .section-title {
-    font-size: 18px;
-  }
-  .visually-hidden {
-    width: 1px;
-    height: 1px;
-    clip: rect(1px, 1px, 1px, 1px);
-    position: absolute;
-  }
-  .container {
-    display: block;
-    position: relative;
-    box-sizing: border-box;
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-    color: #fff;
-  }
-  
-  /*************  header **************/
-  
-  .welcome {
-    background-image: url("../img/banner-bg.jpg");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    background-color: #000;
-    position: relative;
-    z-index: 0;
-  }
-  .welcome:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    opacity: 0.45;
-    background-color: #000;
-    z-index: -1;
-  }
-  .welcome-title {
-    display: block;
-    font-size: 45px;
-    text-transform: uppercase;
-    width: 700px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 100px 0;
-  }
-  .header-logo {
-    width: 185px;
-  }
-  .menu {
-    margin-left: auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 25px;
-  }
-  .menu-list {
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .menu-list-item {
-    margin-left: 50px;
-  }
-  .menu-link {
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 13px;
-    font-weight: 400;
-    color: #fff;
-  }
-  
-  .wrapper {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 0;
-  }
-  /*************  left side **************/
-  
-  main {
-    display: inline-block;
-    position: relative;
-    width: 778px;
-    margin-right: 120px;
-    min-height: 200px;
-    vertical-align: top;
-    margin-top: 64px;
-  }
-  .article {
-    position: relative;
-    box-sizing: border-box;
-    margin-bottom: 64px;
-    display: flex;
-    flex-flow: row;
-  }
-  .article-img {
-    position: relative;
-    display: inline-block;
-  }
-  .article-img img {
-    width: 380px;
-  }
-  .article-content {
-    margin-left: 30px;
-    position: relative;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-  }
-  
-  .article-content-type {
-    list-style-type: none;
-    padding: 0;
-  }
-  .article-content-type li {
-    display: inline-block;
-  }
-  .article-content-type a {
-    color: #b59f5b;
-    font-size: 14px;
-    font-weight: 600;
-    margin-right: 20px;
-    text-transform: uppercase;
-    text-decoration: none;
-  }
-  .article-content-theme {
-    color: #0f0d0e;
-    font-size: 20px;
-    font-weight: 600;
-    text-transform: uppercase;
-    margin-top: 12px;
-  }
-  .article-content-theme a {
-    color: #0f0d0e;
-    text-decoration: none;
-  }
-  .article-content-date {
-    margin-top: 24px;
-  }
-  .article-content-date time {
-    color: #888888;
-    font-size: 12px;
-  }
-  .article-content-date span {
-    color: #000;
-    font-size: 12px;
-    font-weight: 600;
-    margin-left: 12px;
-  }
-  .article-content-text {
-    color: #0f0d0e;
-    font-size: 15px;
-    margin-top: 48px;
-  }
-  
-  /*************  right side **************/
-  
-  aside {
-    display: inline-block;
-    position: relative;
-    width: 272px;
-    min-height: 200px;
-    vertical-align: top;
-    margin-top: 64px;
-  }
-  .post-head {
-    color: #0f0d0e;
-    font-size: 14px;
-    font-weight: 600;
-    display: block;
-    text-transform: uppercase;
-    margin-bottom: 40px;
-    position: relative;
-  }
-  .post-head::after {
-    content: "";
-    width: 64px;
-    height: 3px;
-    background-color: #e1d9bd;
-    display: inline-block;
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    top: 34px;
-    margin: auto;
-  }
-  .posts {
-    margin-top: 48px;
-  }
-  .post {
-    position: relative;
-    box-sizing: border-box;
-    margin-bottom: 22px;
-    display: flex;
-    flex-flow: row;  
-  }
-  .post-img {
-    position: relative;
-    display: inline-block;
-  }
-  .post-img img {
-    width: 70px;
-  }
-  
-  .post-content {
-    margin-left: 20px;
-    position: relative;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-  }
-  .post-content-theme {
-    color: #0f0d0e;
-    font-size: 14px;
-    font-weight: 600;
-    text-transform: uppercase;
-    margin-top: 4px;
-    line-height: 16px;
-  }
-  .post-content-theme a {
-    color: #0f0d0e;
-    text-decoration: none;  
-  }
-  .post-content-date {
-    color: #888888;
-    font-size: 12px;
-  }
-  
-  .post-search-form {
-    box-sizing: border-box;
-    display: flex;
-    margin-top: 60px;
-  }
-  .post-search-field {
-    box-sizing: border-box;
-    width: 224px;
-    height: 48px;
-    background-color: #f4f7f6;
-    outline: 0;
-    font-size: 15px;
-    color: #000;
-    padding: 15px;
-    text-align: left;
-    border: none;
-  }
-  .post-search-field[placeholder]:empty:before {
-    content: attr(placeholder);
-    color: #555;
-  }
-  .post-search-btn {
-    width: 48px;
-    height: 48px;
-    background-color: #b59f5b;
-    background-image: url("../svg/search.svg");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 20px;
-    cursor: pointer;
-    border: none;
-  }
-  
-  .subscribe-form {
-    margin-top: 60px;
-  }
-  .subscribe-field {
-    width: 100%;
-    height: 48px;
-    background-color: #f4f7f6;
-    outline: 0;
-    font-size: 15px;
-    color: #000;
-    padding: 15px;
-    text-align: left;
-    box-sizing: border-box;
-    border: none;
-  }
-  .subscribe-field[placeholder]:empty:before {
-    content: attr(placeholder);
-    color: #555;
-  }
-  .subscribe-btn {
-    width: 100%;
-    height: 48px;
-    background-color: #b59f5b;
-    font-size: 15px;
-    padding: 15px;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 600;
-    box-sizing: border-box;
-    margin-top: 18px;
-    cursor: pointer;
-    border: none;
-  }
-  .tags-form {
-    margin-top: 60px;
-  }
-  .themes-form {
-    margin-top: 60px;
-  }
-  
-  .tags {
-    box-sizing: border-box;
-    display: flex;
-    flex-wrap: wrap;
-    list-style-type: none;
-    padding: 0;  
-  }
-  .tags li {
-    display: inline-block;
-    text-transform: uppercase;
-    font-size: 12px;
-    font-weight: 600;
-    border: 4px solid #ededed;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    padding: 4px 13px;
-  }
-  .tag {
-    text-decoration: none;
-    color: #000;
-  }
-  
-  .themes {
-    box-sizing: border-box;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    list-style-type: none;
-    padding: 0;  
-  }
-  .themes li {
-    font-size: 14px;
-    font-weight: 600;
-    margin-bottom: 5px;
-    text-align: left;
-    border-bottom: 1px solid #eee;
-    padding: 10px 0;
-  }
-  .theme {
-    color: #000;
-    text-decoration: none;
-  }
-  .theme span {
-    color: #b59f5b;
-    font-size: 12px;
-    vertical-align: super;
-  }
-  
-  .networks {
-    width: 100%;
-    padding: 28px;
-    background-color: #f4f7f6;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    list-style-type: none;
-    padding: 0;  
-  }
-  .networks li {
-    width: 24px;
-    height: 24px;
-    margin: 24px;
-  }
-  .network {
-    width: 24px;
-    height: 24px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    cursor: pointer;
-    background-size: 24px;
-    display: inline-block;
-  }
-  
-  .network.pt {
-    background-image: url(../svg/001-pinterest.svg);
-  }
-  .network.fb {
-    background-image: url(../svg/002-facebook-logo.svg);
-  }
-  .network.tm {
-    background-image: url(../svg/003-tumblr.svg);
-  }
-  .network.tw {
-    background-image: url(../svg/004-twitter.svg);
-  }
-  .network.in {
-    background-image: url(../svg/005-instagram.svg);
-  }
-  
-  .copyright {
-    color: #999;
-    font-size: 12px;
-    font-weight: 600;
-    margin-top: 74px;
-    margin-bottom: 40px;
-  }
- 
+  font-family: OpenSans;
+  src: url("../fonts/OpenSans-Regular.woff");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: OpenSans;
+  src: url("../fonts/OpenSans-Bold.woff");
+  font-weight: 600;
+  font-style: normal;
+}
+
+body {
+  margin: 0;
+  font-family: OpenSans;
+}
+.section {
+  background-color: #eeeeee;
+}
+.section-title {
+  font-size: 18px;
+}
+.visually-hidden {
+  width: 1px;
+  height: 1px;
+  clip: rect(1px, 1px, 1px, 1px);
+  position: absolute;
+}
+.container {
+  display: block;
+  position: relative;
+  box-sizing: border-box;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  color: #fff;
+}
+
+/*************  header **************/
+
+.welcome {
+  background-image: url("../img/banner-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-color: #000;
+  position: relative;
+  z-index: 0;
+}
+.welcome:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.45;
+  background-color: #000;
+  z-index: -1;
+}
+.welcome-title {
+  display: block;
+  font-size: 45px;
+  text-transform: uppercase;
+  width: 700px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 100px 0;
+}
+.header-logo {
+  width: 185px;
+}
+.menu {
+  margin-left: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 25px;
+}
+.menu-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+.menu-list-item {
+  margin-left: 50px;
+}
+.menu-link {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 400;
+  color: #fff;
+}
+
+.wrapper {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 0;
+}
+
+/************* trands **************/
+
+
+.trands-head {
+  color: #0f0d0e;
+  font-size: 20px;
+  font-weight: 600;
+  display: block;
+  text-transform: uppercase;
+  margin-bottom: 40px;
+  position: relative;
+  text-align: center;  
+}
+.trands-head::after {
+  content: "";
+  width: 64px;
+  height: 3px;
+  background-color: #e1d9bd;
+  display: inline-block;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 34px;
+  margin: auto;
+}
+.trands {
+  display: flex;
+  gap: 4px;
+}
+.trand {
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-color: #000;
+  position: relative;
+  height: 320px;
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  z-index: 0;
+}
+.trand:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.6;
+  background-color: #000;
+  z-index: -1;
+}
+.trand:nth-child(1) {
+  background-image: url("../img/trend1.jpg");
+}
+.trand:nth-child(2) {
+  background-image: url("../img/trend2.jpg");
+}
+.trand:nth-child(3) {
+  background-image: url("../img/trend3.jpg");
+}
+.trand:nth-child(4) {
+  background-image: url("../img/trend4.jpg");
+}
+.trand-box {
+  border: 3px solid #b59f5b;
+  margin: 0 22px 16px;
+  padding: 32px;
+}
+.trand-theme {
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #fff;
+}
+ul.trand-tags {
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 8px;
+}
+.trand-tags li {
+  display: inline-block;
+}
+.trand-tags a {
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #b59f5b;
+  margin-right: 20px;
+  text-decoration: none; 
+}
+
+/*************  left side **************/
+
+main {
+display: inline-block;
+position: relative;
+width: 778px;
+margin-right: 120px;
+min-height: 200px;
+vertical-align: top;
+margin-top: 64px;
+}
+.article {
+  position: relative;
+  box-sizing: border-box;
+  margin-bottom: 64px;
+  display: flex;
+  flex-flow: row;
+}
+.article-img {
+  position: relative;
+  display: inline-block;
+}
+.article-img img {
+  width: 380px;
+}
+.article-content {
+  margin-left: 30px;
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+}
+
+.article-content-type {
+  list-style-type: none;
+  padding: 0;
+}
+.article-content-type li {
+  display: inline-block;
+}
+.article-content-type a {
+  color: #b59f5b;
+  font-size: 14px;
+  font-weight: 600;
+  margin-right: 20px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.article-content-theme {
+  color: #0f0d0e;
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-top: 12px;
+}
+.article-content-theme a {
+  color: #0f0d0e;
+  text-decoration: none;
+}
+.article-content-date {
+  margin-top: 24px;
+}
+.article-content-date time {
+  color: #888888;
+  font-size: 12px;
+}
+.article-content-date span {
+  color: #000;
+  font-size: 12px;
+  font-weight: 600;
+  margin-left: 12px;
+}
+.article-content-text {
+  color: #0f0d0e;
+  font-size: 15px;
+  margin-top: 48px;
+}
+
+/*************  right side **************/
+
+aside {
+  display: inline-block;
+  position: relative;
+  width: 272px;
+  min-height: 200px;
+  vertical-align: top;
+  margin-top: 64px;
+}
+.post-head {
+  color: #0f0d0e;
+  font-size: 14px;
+  font-weight: 600;
+  display: block;
+  text-transform: uppercase;
+  margin-bottom: 40px;
+  position: relative;
+  text-align: center;  
+}
+.post-head::after {
+  content: "";
+  width: 64px;
+  height: 3px;
+  background-color: #e1d9bd;
+  display: inline-block;
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 34px;
+  margin: auto;
+}
+.posts {
+  margin-top: 48px;
+}
+.post {
+  position: relative;
+  box-sizing: border-box;
+  margin-bottom: 22px;
+  display: flex;
+  flex-flow: row;  
+}
+.post-img {
+  position: relative;
+  display: inline-block;
+}
+.post-img img {
+  width: 70px;
+}
+
+.post-content {
+  margin-left: 20px;
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+}
+.post-content-theme {
+  color: #0f0d0e;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-top: 4px;
+  line-height: 16px;
+}
+.post-content-theme a {
+  color: #0f0d0e;
+  text-decoration: none;  
+}
+.post-content-date {
+  color: #888888;
+  font-size: 12px;
+}
+
+.post-search-form {
+  box-sizing: border-box;
+  display: flex;
+  margin-top: 60px;
+}
+.post-search-field {
+  box-sizing: border-box;
+  width: 224px;
+  height: 48px;
+  background-color: #f4f7f6;
+  outline: 0;
+  font-size: 15px;
+  color: #000;
+  padding: 15px;
+  text-align: left;
+  border: none;
+}
+.post-search-field[placeholder]:empty:before {
+  content: attr(placeholder);
+  color: #555;
+}
+.post-search-btn {
+  width: 48px;
+  height: 48px;
+  background-color: #b59f5b;
+  background-image: url("../svg/search.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 20px;
+  cursor: pointer;
+  border: none;
+}
+
+.subscribe-form {
+  margin-top: 60px;
+}
+.subscribe-field {
+  width: 100%;
+  height: 48px;
+  background-color: #f4f7f6;
+  outline: 0;
+  font-size: 15px;
+  color: #000;
+  padding: 15px;
+  text-align: left;
+  box-sizing: border-box;
+  border: none;
+}
+.subscribe-field[placeholder]:empty:before {
+  content: attr(placeholder);
+  color: #555;
+}
+.subscribe-btn {
+  width: 100%;
+  height: 48px;
+  background-color: #b59f5b;
+  font-size: 15px;
+  padding: 15px;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+  box-sizing: border-box;
+  margin-top: 18px;
+  cursor: pointer;
+  border: none;
+}
+.tags-form {
+  margin-top: 60px;
+}
+.themes-form {
+  margin-top: 60px;
+}
+
+.tags {
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  padding: 0;  
+}
+.tags li {
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 600;
+  border: 4px solid #ededed;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  padding: 4px 13px;
+}
+.tag {
+  text-decoration: none;
+  color: #000;
+}
+
+.themes {
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  list-style-type: none;
+  padding: 0;  
+}
+.themes li {
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 5px;
+  text-align: left;
+  border-bottom: 1px solid #eee;
+  padding: 10px 0;
+}
+.theme {
+  color: #000;
+  text-decoration: none;
+}
+.theme span {
+  color: #b59f5b;
+  font-size: 12px;
+  vertical-align: super;
+}
+
+.networks {
+  width: 100%;
+  padding: 28px;
+  background-color: #f4f7f6;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+  padding: 0;  
+}
+.networks li {
+  width: 24px;
+  height: 24px;
+  margin: 24px;
+}
+.network {
+  width: 24px;
+  height: 24px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  cursor: pointer;
+  background-size: 24px;
+  display: inline-block;
+}
+
+.network.pt {
+  background-image: url(../svg/001-pinterest.svg);
+}
+.network.fb {
+  background-image: url(../svg/002-facebook-logo.svg);
+}
+.network.tm {
+  background-image: url(../svg/003-tumblr.svg);
+}
+.network.tw {
+  background-image: url(../svg/004-twitter.svg);
+}
+.network.in {
+  background-image: url(../svg/005-instagram.svg);
+}
+
+.copyright {
+  color: #999;
+  font-size: 12px;
+  font-weight: 600;
+  margin-top: 74px;
+  margin-bottom: 40px;
+}
