--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,7 @@ body {
   text-transform: uppercase;
   max-width: 700px;
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   padding: 100px 0;
 }
 .header-logo {
@@ -96,12 +95,12 @@ body {
 }
 .menu-list {
   padding-left: 0;
-  margin-bottom: 0;
+  margin: 0;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
 }
-.menu-list-item {
+.menu-list-item:not(:first-child) {
   margin-left: 50px;
 }
 .menu-link {
@@ -188,7 +187,7 @@ body {
   font-weight: 600;
   display: block;
   text-transform: uppercase;
-  margin-bottom: 40px;
+  margin: 40px 0;
   position: relative;
   text-align: center;  
 }
@@ -208,6 +207,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-bottom: 64px;
 }
 .trand {
   background-repeat: no-repeat;
@@ -215,7 +215,7 @@ body {
   background-size: cover;
   background-color: #000;
   position: relative;
-  height: 320px;
+  min-height: 320px;
   width: 24.8%;
   display: flex;
   flex-direction: column;
@@ -256,6 +256,7 @@ body {
   font-weight: 600;
   text-transform: uppercase;
   color: #fff;
+  margin: 0;
 }
 ul.trand-tags {
   list-style-type: none;
@@ -264,13 +265,14 @@ ul.trand-tags {
 }
 .trand-tags li {
   display: inline-block;
+  margin-right: 20px;
+
 }
 .trand-tags a {
   font-size: 14px;
   font-weight: 600;
   text-transform: uppercase;
   color: #b59f5b;
-  margin-right: 20px;
   text-decoration: none; 
 }
 
@@ -316,10 +318,12 @@ ul.trand-tags {
   font-weight: 600;
   text-transform: uppercase;
   color: #000;  
+  margin: 0;
 }
 .offer-text {
   font-size: 14px;
   color: #000;  
+  margin: 0;
 }
 .offer-text a {
   color: #b59f5b;
@@ -353,6 +357,8 @@ ul.trand-tags {
   font-size: 12px;
   font-weight: 600;
   color: #fff;
+  border: none;
+  cursor: pointer;
 }
 
 
@@ -375,13 +381,12 @@ ul.trand-tags {
 /*************  left side **************/
 
 main {
-display: inline-block;
-position: relative;
-width: 778px;
-margin-right: 120px;
-min-height: 200px;
-vertical-align: top;
-margin-top: 64px;
+  display: inline-block;
+  position: relative;
+  width: 778px;
+  margin-right: 120px;
+  min-height: 200px;
+  vertical-align: top;
 }
 .article {
   position: relative;
@@ -401,7 +406,6 @@ margin-top: 64px;
   width: 100%;
 }
 .article-content {
-  display: flex;
   flex-direction: column;
   width: 47%;
   vertical-align: top;
@@ -503,7 +507,6 @@ aside {
   width: 272px;
   min-height: 200px;
   vertical-align: top;
-  margin-top: 64px;
 }
 .post-head {
   color: #0f0d0e;
@@ -666,7 +669,6 @@ aside {
 
 .themes {
   box-sizing: border-box;
-  display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   list-style-type: none;
@@ -684,10 +686,11 @@ aside {
   color: #000;
   text-decoration: none;
 }
-.theme span {
+.themes li span {
   color: #b59f5b;
   font-size: 12px;
   vertical-align: super;
+  margin-left: 6px;
 }
 
 
@@ -718,12 +721,12 @@ aside {
   align-items: center;
   justify-content: center;
   list-style-type: none;
-  padding: 0;  
+  padding: 24px 0;
 }
 .networks li {
   width: 24px;
   height: 24px;
-  margin: 24px;
+  margin: 0 24px;
 }
 .network {
   width: 24px;
@@ -757,6 +760,7 @@ aside {
   font-weight: 600;
   margin-top: 74px;
   margin-bottom: 40px;
+  text-align: center;
 }
 
 
