--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ body {
   position: relative;
   z-index: 0;
   padding-top: 25px;
+  padding-bottom: 100px;
 }
 .welcome:after {
   content: "";
@@ -81,7 +82,7 @@ body {
   max-width: 700px;
   text-align: center;
   margin: 0 auto;
-  padding: 100px 0;
+  padding-top: 100px;
 }
 .header-logo {
   width: 185px;
@@ -799,12 +800,16 @@ aside {
   justify-content: center;
   align-items: center;
 }
+.overlay.active {
+  display: flex;
+}
 
 .popup {
-  width: 380px;
-  height: 640px;
+  width: 320px;
   background-color: #fff;
   position: relative;
+  padding: 30px;
+  margin: 30px 10px;
 }
 
 .popup-head {
@@ -837,9 +842,44 @@ aside {
   top: -40px;
   right: 0;
   font-size: 32px;
+  font-weight: 100;
+}
+.popup-form {
+  font-size: 12px;
+}
+.popup-form-frequency {
+  padding: 10px;
+  width: 100%;
+  background: #eee;
+  border: none;
+  outline: none;
+  margin-bottom: 16px;
+}
+.popup-form-question {
+  margin: 6px 0;
+}
+.popup-form-subscription {
+  color: darkgoldenrod;
+  accent-color: currentcolor;
+  vertical-align: text-top;
+  margin-bottom: 16px;
+}
+.popup-form-textarea {
+  padding: 10px;
+  width: 100%;
+  background: #eee;
+  min-height: 100px;
+  border: none;
+  margin-bottom: 16px;
+}
+.popup-form-submit {
+  width: 100%;
+  background-color: #b59f5b;
+  border: none;
+  color: #fff;
+  padding: 15px;
   font-weight: 600;
 }
-
 
 @media (max-width: 767px) {
   .popup {
